buttons print, add kinda works,这是WIP

--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@ body {
     margin:0px;
 }
 
+button {
+    border-width: 0px;
+}
+
 .main {
     display: flex;
     flex-direction: row;
@@ -45,10 +49,9 @@ h1 {
     background-color:#97BFB4;
     border-radius: 10px;
     margin: 1em;
-    width: 35vw;
+    width: 30vw;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
 }
 
 .screen-holder {
@@ -58,8 +61,8 @@ h1 {
 }
 
 .screen {
-    width: 30vw;
-    height: 20vh;
+    width: 26vw;
+    height: 18vh;
     background-color: #F5EEDC;
     margin: 1em;
     border-radius: 10px;
@@ -82,8 +85,8 @@ h1 {
 }
 
 .clear, .delete {
-    width: 14.5vw;
-    height: 6vw;
+    width: 12.5vw;
+    height: 5vw;
     margin: 0.2em;
     border-radius: 10px;
     font-size: 2rem;
@@ -92,11 +95,19 @@ h1 {
 .row-1 button, .row-2 button, .row-3 button, .row-4 button {
     background-color: #F5EEDC;
     color: #4F091D;
-    width: 6vw;
-    height: 6vw;
+    width: 5vw;
+    height: 5vw;
     margin: 0.2em;
     border-radius: 10px;
     font-size: 3rem;
+}
+
+.row-1 button:hover, .row-2 button:hover, .row-3 button:hover, .row-4 button:hover {
+    background-color: #D6D0C1;
+}
+
+.row-1 button:active, .row-2 button:active, .row-3 button:active, .row-4 button:active {
+    background-color: #B8B3A5;
 }
 
 .row-1, .row-2, .row-3, .row-4 {
@@ -105,3 +116,4 @@ h1 {
     justify-content: center;
     gap: 0.5rem;
 }
+
