--- a/style.css
+++ b/style.css
@@ -29,32 +29,7 @@ button {
     height: 75vh;
     min-height: 500px;
     padding: 10px;
-}
-
-.header {
-    width: 100%;
-    background-color: #97BFB4;
-    padding: 0.5rem;
-    margin:0px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
-
-.header-text {
-    background-color: #F5EEDC;
-    border-color: #7fa399;
-    border-width: 1px;
-    border-style: groove;
-    padding: 0.5rem;
-    border-radius: 10px;
-}
-
-h1 {
-    padding: 0px;
-    margin:0px;
-    color: #4F091D;
-    font-size: 3rem;
+    margin-top: 2em;
 }
 
 .calculator {
@@ -81,18 +56,21 @@ h1 {
     border-width: 1px;
     border-style: groove;
     margin: 1em;
+    padding: 0.5em;
     border-radius: 10px;
+    word-wrap: break-word;
+    word-break: break-all;
 }
 
 .top-screen {
-    min-height: 100px;
+    min-height: 75px;
     font-size: 20px;
     text-align: left;
 }
 
 .bottom-screen {
     min-height: 100px;
-    font-size: 40px;
+    font-size: 50px;
     text-align: right;
 }
 
@@ -107,11 +85,27 @@ h1 {
     color:#F5EEDC;
 }
 
+.clear:hover {
+    background-color:#3b0716;
+}
+
+.clear:active {
+    background-color:#2e0511;
+}
+
 .delete {
     background-color:#DD4A48;
     color:#F5EEDC;
 }
 
+
+.delete:hover {
+    background-color:#bb4240;
+}
+
+.delete:active {
+    background-color:#9e3836;
+}
 .clear, .delete {
     width: 30vw;
     height: 90px;
